# telethon-api

./: .gitignore  main.py  pyproject.toml
depends/: depends_types.py  tg_client_depends.py
routes/: telegram_routes.py
schemas/: tg_schemas.py
services/: tg_services.py
utils/: constants_utils.py  env_utils.py  exceptions_utils.py  regexp_utils.py
